--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,2 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="d1bf78">  <td>19/08/22 00:01:07</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;test1.close2()[pri:0, instance:Cal.Sample.test1@568bf312]">&lt;&lt;close2</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="d1bf78">  <td>19/08/22 00:01:07</td>   <td>-219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test1.delete()[pri:0, instance:Cal.Sample.test1@568bf312]">delete</td> 
+  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="d1bf78">  <td>19/08/22 00:01:07</td>   <td>-47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test1.insert()[pri:0, instance:Cal.Sample.test1@568bf312]">insert</td> 
+  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="d1bf78">  <td>19/08/22 00:01:07</td>   <td>-31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test1.select1()[pri:0, instance:Cal.Sample.test1@568bf312]">select1</td> 
+  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="d1bf78">  <td>19/08/22 00:01:06</td>   <td>-1104</td> <td>&nbsp;</td><td title="&gt;&gt;test1.testingconnection()[pri:0, instance:Cal.Sample.test1@568bf312]">&gt;&gt;testingconnection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@339099861</td>   <td></td> </tr>
+<tr bgcolor="d1bf78">  <td>19/08/22 00:01:07</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test1.update()[pri:0, instance:Cal.Sample.test1@568bf312]">update</td> 
+  <td>main@339099861</td>   <td></td> </tr>
 </table>
